# eagletrtbot

./: .dockerignore  .gitignore  Dockerfile  Makefile  bot.py  docker-compose.yml  pyproject.toml  requirements.txt
bot/: config.py  jobs.py  singleton.py  utils.py
bot/commands/: brao.py  custom_tags.py  fire.py  odg.py  opera.py  ore_lab.py  punti.py  random_photo.py  simione.py  spesa.py  tecsone.py  tonis.py  tracker.py  vsv.py
bot/commands/utils/: airtable_utils.py
bot/conversations/: remindme.py
bot/database/: engine.py  session.py
bot/media/: __init__.py
bot/tasks/: instagram.py  tiktok.py
